# PluginRegistry

./: CMakeLists.txt  PluginRegistry.cpp  PluginRegistry.h  main.cpp
add/: CMakeLists.txt  add_plugin.cpp  add_plugin.h
